global refack